# alchemy

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/bootinfo/: Cargo.toml
crates/bootinfo/src/: lib.rs
crates/kernel/: Cargo.toml  build.rs  linker.ld  x86_64-alchemy-none.json
crates/kernel/src/: allocator.rs  console.rs  cpu.rs  debug.rs  font.rs  gdt.rs  graphics.rs  idt.rs  main.rs  memory.rs  paging.rs  panic.rs  threading.rs
crates/loader/: Cargo.toml
crates/loader/src/: debug.rs  graphics.rs  main.rs  paging.rs
libs/: OVMF_VARS.fd
scripts/: run-qemu.ps1
