[package]
name = "alchemy-kernel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
alchemy-bootinfo = { path = "../bootinfo" }
x86_64 = { version = "0.15.4", features = ["instructions", "abi_x86_interrupt"] }
spin = "0.10.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.5"

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"

[[bin]]
name = "alchemy-kernel"
path = "src/main.rs"
test = false
bench = false
