[package]
name = "alchemy-loader"
version = "0.1.0"
edition = "2024"

[dependencies]
alchemy-bootinfo = { path = "../bootinfo" }
uefi = { version = "0.36.1", features = ["alloc", "global_allocator", "logger", "panic_handler"] }
x86_64 = { version = "0.15.4", features = ["instructions", "abi_x86_interrupt"] }
xmas-elf = { version = "0.10.0", default-features = false }

#[profile.dev]
#panic = "abort"
#
#[profile.release]
#panic = "abort"
